[package]
name = "enumerate"
version = "0.1.1"
authors = ["reslario <simon.kunze2310@gmail.com>"]
edition = "2018"
description = "An attribute macro that, given a trait and its implementers, generates an enum that can be used instead of a trait object, avoiding dynamic dispatch."
repository = "https://github.com/reslario/enumerate"
readme = "README.md"
keywords = ["traits", "dispatch", "speed", "performance", "optimization"]
license = "MIT OR Apache-2.0"


[dependencies]
proc-macro2 = "0.4.30"
quote = "0.6.12"

[dependencies.syn]
version = "0.15.36"
features = ["full"]

[lib]
name = "enumerate"
path = "src/lib.rs"
proc-macro = true